--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "akumas-apps",
+  "name": "zcalc",
   "version": "1.5.0",
   "description": "Калькулятор жалюзев и техпомощь стайл калькулятор",
   "main": "main.js",
