--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "pack": "electron-forge package",
     "start": "electron ."
   },
-  "repository": "https://github.com/akuma-code/AkumaApps.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/akuma-code/AkumaApps.git"
+  },
   "keywords": [
     "zcalc",
     "tps"
@@ -60,5 +63,9 @@
         }
       ]
     }
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/akuma-code/AkumaApps/issues"
+  },
+  "homepage": "https://github.com/akuma-code/AkumaApps#readme"
 }
